# egui_solarized

./: Cargo.toml  LICENSE  README.md
examples/demo/: Cargo.toml
examples/demo/src/: code_example.rs  main.rs  widget_gallery.rs
src/: lib.rs
