[package]
name = "demo"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
egui = "0.31"
egui_extras = { version = "0.31.0", features = ["image"] }
eframe = "0.31"
egui-solarized = { path = "../.." }
env_logger = "0.11.6"
log = "0.4.26"
serde = { version = "1.0.218", features = ["derive"] }
chrono = "0.4.40"

[features]
default = []
chrono = []