[package]
name = "demo"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
egui = "0.32"
egui_extras = { version = "0.32", features = ["image"] }
eframe = "0.32"
egui_solarized = { path = "../.." }
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"

[features]
default = []
chrono = []